--- a/circle.yml
+++ b/circle.yml
@@ -1,15 +1,15 @@
 ---
 machine:
-  python:
-    version: 2.7.6
   environment:
-    BEETBOX_HOME: /home/ubuntu/beetbox
-    BEETBOX_DEPENDENCIES: https://raw.githubusercontent.com/drupalmel/beetbox/master/tests/dependencies.sh
+    BEET_HOME: /beetbox
+    BEET_USER: ubuntu
+    BEET_DEPENDENCIES: https://raw.githubusercontent.com/beetboxvm/beetbox/master/provisioning/beetbox.sh
+    BEET_PROVISION: provisioning/beetbox.sh
 dependencies:
   pre:
-    - curl -fsSL $BEETBOX_DEPENDENCIES | bash
+    - curl -fsSL $BEET_DEPENDENCIES | bash
+    - sudo cp -rf ~/$CIRCLE_PROJECT_REPONAME/* $BEET_HOME/provisioning/ansible/roles/${CIRCLE_PROJECT_REPONAME/ansible-role-beetbox-/beetboxvm.}
+    - sudo cp ~/$CIRCLE_PROJECT_REPONAME/tests/config.yml ~/vagrant.config.yml
 test:
   override:
-    - sudo cp -rf ~/$CIRCLE_PROJECT_REPONAME/* $BEETBOX_HOME/ansible/roles/${CIRCLE_PROJECT_REPONAME/ansible-role-/thomtoogood.}
-    - sudo cp ~/$CIRCLE_PROJECT_REPONAME/tests/config.yml $BEETBOX_HOME/ansible/vagrant.config.yml
-    - sudo $BEETBOX_HOME/ansible/build.sh
+    - $BEET_HOME/$BEET_PROVISION
