--- a/circle.yml
+++ b/circle.yml
@@ -1,17 +1,8 @@
 ---
-machine:
-  hosts:
-    beetbox.local: 127.0.0.1
-  environment:
-    BEET_HOME: /beetbox
-    BEET_BASE: /var/beetbox
-    BEET_USER: ubuntu
-    BEET_DEPENDENCIES: https://raw.githubusercontent.com/beetboxvm/beetbox/master/provisioning/beetbox.sh
 dependencies:
   override:
-    - sudo cp -rf ~/$CIRCLE_PROJECT_REPONAME $BEET_BASE ; sudo chown -R $BEET_USER:$BEET_USER $BEET_BASE
-    - bash <(curl -s $BEET_DEPENDENCIES)
+    - bash <(curl -fsSL http://bit.ly/beetbuild)
 test:
   override:
-    - sudo cp ~/$CIRCLE_PROJECT_REPONAME/tests/config.yml ~/vagrant.config.yml
-    - bash <(curl -s $BEET_DEPENDENCIES)
+    - sudo cp ~/$CIRCLE_PROJECT_REPONAME/tests/config.yml /beetbox/.beetbox/config.yml
+    - bash <(curl -fsSL http://bit.ly/beetbuild)
