Set default backdrop_checkout_depth.

--- a/.beetbox/config.yml
+++ b/.beetbox/config.yml
@@ -5,6 +5,7 @@ role_path: "{{ beet_home }}/provisioning/ansible/roles/beetboxvm.backdrop"
 
 beet_project: backdrop
 backdrop_checkout: yes
+backdrop_checkout_depth: ~
 backdrop_install_site: yes
 backdrop_account_name: admin
 backdrop_account_pass: admin
