Fixed circle tests.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,7 +3,7 @@ beet_root: "/path/to/project"
 backdrop_checkout: no
 backdrop_repo: "https://github.com/backdrop/backdrop.git"
 backdrop_version: "HEAD"
-backdrop_checkout_depth: 1
+backdrop_checkout_depth: ~
 backdrop_install_site: no
 backdrop_install_profile: standard
 backdrop_account_name: admin
