--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,7 @@ dependencies:
     - sudo mkdir -p $BEET_BASE/.beetbox
     - sudo cp ~/$CIRCLE_PROJECT_REPONAME/.beetbox/config.yml $BEET_BASE/.beetbox/config.yml
     - sudo rm -rf /beetbox/provisioning/ansible/roles/$ROLE_NAME
-    - sudo ln -s ~/$CIRCLE_PROJECT_REPONAME $ROLE_PATH
+    - sudo ln -s ~/$CIRCLE_PROJECT_REPONAME /beetbox/provisioning/ansible/roles/$ROLE_NAME
 test:
   override:
     - bash -e <(curl -fsSL http://bit.ly/beetbuild)
